# Quattron

./: README.md  uuid (자동 저장됨).xlsx
Controller/: compile.sh  config.h.in  config.h.in~  configure  configure.ac  main.c~
Controller/autom4te.cache/: output.1
Controller/lib/: HAL_pid_J.c  HAL_pid_J.h  KalmanJ.h  MahonyAHRS.c  gpio_J.c  gpio_J.h  mpu6050_J.c  pwm_J.c  ultra_snd.h
Controller/src/: HAL_sensor_J.c~  HAL_sensor_J.h~  i2c_J.c~  mpu6050_J.h~  pwm_J.h~  sensor_J.c~
Custom Kernel/: Makefile  Makefile.in  config.h  config.status  tags
Custom Kernel/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
Custom Kernel/lib/: HAL_motor_J.c  HAL_motor_J.h  HAL_sensor_J.c  HAL_sensor_J.h  KalmanJ.c  Makefile.am  i2c_J.c  i2c_J.h  mpu6050_J.h  pwm_J.h
Custom Kernel/src/: HAL_motor_J.c~  HAL_motor_J.h~  HAL_pid_J.c~  HAL_pid_J.h~  HeadJ.c~  HeadJ.h~  Makefile.am  gpio_J.c~  gpio_J.h~  i2c_J.h~  main.c  mpu6050_J.c~  pid_J.c~  pwm_J.c~  sensor_J.h~
Custom Kernel/test/: mpu6050.c
Qt program/: client.cpp  client.h  data_trans.cpp  data_trans.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h  untitled.pro  untitled.pro.user.bd0273b  untitled.pro.user.bd0273b~
